--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -6,9 +6,10 @@
   		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
   		<script src="http://localhost:4242/socket.io/socket.io.js"></script>
   		<script src="js/connect.js"></script>
+		<script src="js/img_preloader.js"></script>
 	</head>
-	<body>
-		<label for="ip">Ip : </label><input type="text" id="ip"/>
-  		<input type="button" id="connect" value="Connect"/> 
+	<body onload="javascript:img_preloader()">
+	  <label for="ip">Ip : </label><input type="text" id="ip"/>
+  	  <input type="button" id="connect" value="Connect"/>
   	</body>
 </html>
