--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -4,11 +4,12 @@
 	<head>
   		<title>Test</title>
   		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  		<script src="http://localhost:4242/socket.io/socket.io.js"></script>
+  		<script src="http://localhost:24542/socket.io/socket.io.js"></script>
   		<script src="js/connect.js"></script>
 	</head>
 	<body>
-		<label for="ip">Ip : </label><input type="text" id="ip"/>
-  		<input type="button" id="connect" value="Connect"/> 
+		<input type="text" class="cmd" />
+  		<input type="button" id="send" value="Send"/>
+  		<p id="result"></p>
   	</body>
 </html>
