--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<input type="text" class="cmd" />
-  		<input type="button" id="send" value="Send"/>
+  		<input type="button" id="send" value="Send !"/>
   		<p id="result"></p>
   	</body>
 </html>
