map generee en canvas + debut d'UI (test)

--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -2,23 +2,25 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-  		<title>Test</title>
+  		<title>Isometric Map Generation</title>
   		<meta http-equiv="Cache-control" content="max-age=256665">
+		<link rel="stylesheet" type="text/css" href="style.css" />
   		<script src="js/jquery.min.js"></script>
   		<script src="http://localhost:24542/socket.io/socket.io.js"></script>
   		<script src="js/cmd.js"></script>
   		<script src="js/map_generator.js"></script>
 	</head>
 	<body>
-		
-  		<canvas style="border: 1px solid black;" id="c"></canvas>
-  		
-  		
+  		<canvas id="c"></canvas>
+		<div id="header"></div>
+		<input type="text" id="inputbox" />
+		<!--
   		<br />
   		<input type="text" class="cmd" />
   		<input type="button" id="send" value="Send !"/>
   		<input type="button" id="plus" value="Zoom +" />
   		<input type="button" id="moins" value="Zoom -" />
   		<p id="result"></p>
+		-->
   	</body>
 </html>
