--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -8,6 +8,7 @@
   		<script src="http://localhost:24542/socket.io/socket.io.js"></script>
   		<script src="js/cmd.js"></script>
   		<script src="js/map_generator.js"></script>
+  		<!-- <script src="js/nodeConnection.js"></script> -->
 	</head>
 	<body>
 		
