first conenction terminee + cache client + debut de highlight + debug

--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
   		<script src="js/jquery.min.js"></script>
   		<script src="http://localhost:24542/socket.io/socket.io.js"></script>	
-  		<script src="js/monitorUi.js"></script>
   		<script src="js/cmd.js"></script>
   		<script src="js/monitorCache.js"></script>
 	</head>
 	<body>
+		<canvas id="cHighLight"></canvas>
   		<canvas id="c"></canvas>
 		<div id="header"></div>
 		<div id="cmdResult"></div>
@@ -19,4 +19,5 @@
   	</body>
 	<script src="js/map_generator.js"></script>
 	<script src="js/nodeConnection.js"></script>
+	<script src="js/monitorUi.js"></script>
 </html>
