--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -6,18 +6,23 @@
   		<meta http-equiv="Cache-control" content="max-age=256665">
 		<link rel="stylesheet" type="text/css" href="style.css" />
   		<script src="js/jquery.min.js"></script>
-  		<script src="http://localhost:24542/socket.io/socket.io.js"></script>	
+  		<script src="http://localhost:24542/socket.io/socket.io.js"></script>
+  		<script src="js/monitorUi.js"></script>	
   		<script src="js/cmd.js"></script>
   		<script src="js/monitorCache.js"></script>
 	</head>
 	<body>
 		<canvas id="cHighLight"></canvas>
-  		<canvas id="c"></canvas>
+		<canvas id="cRessources"></canvas>
+  		<canvas id="cMap"></canvas>
 		<div id="header"></div>
 		<div id="cmdResult"></div>
+		<div id="errorBox"><span class="errorText"></span></div>
 		<input type="text" class="cmd" />
   	</body>
-	<script src="js/map_generator.js"></script>
+  	<script src="js/canvasHandler.js"></script>
+  	<script src="js/layers.js"></script>
+	<script src="js/mapDraw.js"></script>
+	<script src="js/ressourcesDraw.js"></script>
 	<script src="js/nodeConnection.js"></script>
-	<script src="js/monitorUi.js"></script>
 </html>
