gestion du highlight

--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -24,5 +24,6 @@
   	<script src="js/layers.js"></script>
 	<script src="js/mapDraw.js"></script>
 	<script src="js/ressourcesDraw.js"></script>
+	<script src="js/highlightDraw.js"></script>
 	<script src="js/nodeConnection.js"></script>
 </html>
