--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -19,6 +19,7 @@
 		<div id="cmdResult"></div>
 		<div id="errorBox"><span class="errorText"></span></div>
 		<input type="text" class="cmd" />
+		<div class="latency">latency : <span class="lValue">-</span> ms</div>
   	</body>
   	<script src="js/canvasHandler.js"></script>
   	<script src="js/layers.js"></script>
