gestion des erreures de connections + box + bug fix

--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -12,6 +12,12 @@
   		<script src="js/monitorCache.js"></script>
 	</head>
 	<body>
+		<div id="overlay" style="display:none;"></div>
+		<div id="connectionError">
+			<h1>Connection error <img src="img/ajax-loader.gif" /></h1>
+			<p>Your connection to the node server has been lost.</p>
+			<p>Don't panic, I try a reconnection :)</p>
+		</div>
 		<canvas id="cHighLight"></canvas>
 		<canvas id="cRessources"></canvas>
   		<canvas id="cMap"></canvas>
