overlay lors d'un clic sur case

--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -24,6 +24,7 @@
 		<div id="header"></div>
 		<div id="cmdResult"></div>
 		<div id="errorBox"><span class="errorText"></span></div>
+		<div id="caseContent"><span class="contentText"></span></div>
 		<input type="text" class="cmd" />
 		<div class="latency">latency : <span class="lValue">-</span> ms</div>
   	</body>
