--- a/monitor/client/index.html
+++ b/monitor/client/index.html
@@ -19,6 +19,7 @@
 			<p>Don't panic, I try a reconnection :)</p>
 		</div>
 		<canvas id="cHighLight"></canvas>
+		<canvas id="cPlayers"></canvas>
 		<canvas id="cRessources"></canvas>
   		<canvas id="cMap"></canvas>
 		<div id="header"></div>
@@ -32,6 +33,7 @@
   	<script src="js/layers.js"></script>
 	<script src="js/mapDraw.js"></script>
 	<script src="js/ressourcesDraw.js"></script>
+	<script src="js/playersDraw.js"></script>
 	<script src="js/highlightDraw.js"></script>
 	<script src="js/nodeConnection.js"></script>
 </html>
